*** empty log message ***

--- a/org.eclipse.help/src/org/eclipse/help/standalone/package.html
+++ b/org.eclipse.help/src/org/eclipse/help/standalone/package.html
@@ -23,5 +23,5 @@ is a general mechanism (defined at the plug-in level) by which individual
 plug-ins contribute on-line help and context-sensitive help for their component.
 This Eclipse mechanism for contributing help content needs to be used.&nbsp;
 The stand alone help system is responsible for accessing this information
-and displaying it to the user. The infocenter, unlike the stand alone help system, does not launch UI on the machine that it is running on. When infocenter is started the help content   can be obtained by connecting to a help server (port specified in help plugin preferences) using HTTP connection.</P></body>
+and displaying it to the user. The infocenter, unlike the stand alone help system, does not launch UI on the machine that it is running on. When infocenter is started the help content   can be obtained by connecting to a help server (port specified in Tomcat plugin preferences) using HTTP connection.</P></body>
 </html>
