*** empty log message ***

--- a/org.eclipse.ui.intro/schema/introContentFileSpec.html
+++ b/org.eclipse.ui.intro/schema/introContentFileSpec.html
@@ -250,7 +250,7 @@ ignored.</p>
 <h2><code>anchor</code></h2>
 <br><p class=code id=dtd>&lt;!ELEMENT <a name="e.anchor">anchor</a> EMPTY&gt;</p>
 <p class=code id=dtd>&lt;!ATTLIST anchor</p>
-<p class=code id=dtdAttlist>id&nbsp;CDATA #IMPLIED&gt;</p>
+<p class=code id=dtdAttlist>id&nbsp;CDATA #REQUIRED&gt;</p>
 <p></p>
 <p class=ConfigMarkup id=elementDesc>
 an anchor is the element used to declare extensibility. It is a location in the 
