*** empty log message ***

--- a/org.eclipse.ui.intro/schema/introContentFileSpec.html
+++ b/org.eclipse.ui.intro/schema/introContentFileSpec.html
@@ -11,7 +11,7 @@
 <style>@import url("book.css");</style>
 <!-- default schema documentation stylesheets -->
 <style>@import url("schema.css");</style>
-
+<style>@import url("../../schema.css");</style>
 <title>Intro Content File XML Format</title>
 </head>
 
