147962 [Help] xhtml Help content doesn't work when inside a doc.zip

--- a/org.eclipse.ua.tests/data/help/producer/dynamic.xhtml
+++ b/org.eclipse.ua.tests/data/help/producer/dynamic.xhtml
@@ -41,6 +41,7 @@ This paragraph, which has filter attribute "plugin!=my.invalid.plugin.id.012345"
 </p>
 
 <include path="org.eclipse.ua.tests/data/help/producer/include.xhtml/my.paragraph.id"/>
+<include path="org.eclipse.ua.tests/data/help/producer/dynamicInZip.xhtml/paragraphInZip"/>
 
 </body>
 </html>
